remove jwt and isUserExistsMiddlewarw to retrive all likes in likes.router.js, impliment functionlity to get all likes , create a express validation likesAndBookmarkValidator.middleware.js to validate params, add functionlity to retrive all likes Based on Id in LiksModel
