# src/features/likes/likes.model.js
@@ -1,3 +1,7 @@
+import ApplicationError from "../../middlewares/applicationError.middleware.js";
+
+const NO_LIKES_FOUND = "There are no likes for the post with ID:";
+const NOT_FOUND = 404;
 
 export default class LikesModel{
     constructor(id, postId, userId){
@@ -7,10 +11,16 @@ export default class LikesModel{
     }
 
     static getByPostId(postId){
-
+        const likes = likesList.filter((like) => like.postId == postId);
+        if(likes.length == 0) throw new ApplicationError(`${NO_LIKES_FOUND} ${postId}`,NOT_FOUND);
+        return likes;
     }
 
     static toggle(userId, postId){
-        
+
     }
 }
+
+const likesList = [
+    new LikesModel(1, 1, 1)
+]
